[package]
name = "ssn"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "U.S. Social Security Number (SSN) parsing and validation"
repository = "https://github.com/gideonsolutions/ssn"
keywords = ["ssn", "social-security", "tax", "validation"]
categories = ["parsing", "value-formatting"]

[dependencies]
regex = "1"
thiserror = "2"
