[package]
name = "tin"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
description = "U.S. Taxpayer Identification Number (TIN) parsing and validation — SSN, ITIN, and ATIN"
repository = "https://github.com/gideonsolutions/tin"
keywords = ["tin", "ssn", "itin", "tax", "validation"]
categories = ["parsing", "value-formatting"]
documentation = "https://docs.rs/tin"

[dependencies]
regex = "1"
thiserror = "2"
